# parallel_algos

./: #aagam#  .#aagam  .gitignore  CMakeLists.txt  INST.md  README.md  TODO.md  build.sh  coll  mpi_ring.c
mpi_basics/: mpi_coll.c  mpi_cy.c  mpi_hello.c
mpi_matvec_1D_row/: a.out  input  mpi_matvec_1D_row.c
sample_benchmarks/: mpi_pi_strong_output.txt  mpi_pi_strong_time.txt  mpi_pi_weak_output.txt  mpi_pi_weak_time.txt  omp_pi_strong_output.txt  omp_pi_strong_time.txt  omp_pi_weak_output.txt  omp_pi_weak_time.txt  plot_scaling.py
src/demo_usage/: benchmark_mpi_pi.sh  benchmark_omp_pi.sh  mpi_coll_bcast.c  mpi_coll_red.c  mpi_coll_scan.c  mpi_coll_scatter_gather.c  mpi_cy.c  mpi_hello.c  mpi_pi.c  mpi_ring.c  omp_pi.c  run_all_benchmarks.sh
src/dense_algebra/: mm_blas.c  mm_pblas.c
xx_scratch/: hello-world  hello-world.c  pi  pi.c
